# fyi

./: .dockerignore  .gitignore  .npmrc  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  compose.yaml  deny.toml  mkdocs.yml  package.json  turbo.json
.docker/: prometheus.yml  tenants.yaml
.docker/grafana/: axum_http_overview.json
.docker/grafana/dashboards/: crud.dashboard.py  redirect.dashboard.py  redirect_by_ip.dashboard.py  redirect_by_slug.dashboard.py  redirect_ip_slug.dashboard.py
.docker/grafana/provisioning/dashboards/: axum.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml  docs.yml  e2e-testing.yml  helm-publish.yml  publish-npm.yml  release.yml
apps/api/: README.md
apps/db-migrator/: README.md
apps/redirect/: README.md
apps/web/: .env.local.example  README.md  eslint.config.mjs  package.json  providers.tsx  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/register/: page.tsx
apps/web/app/(dashboard)/links/: page.tsx
apps/web/app/(dashboard)/projects/: page.tsx
apps/web/app/(dashboard)/projects/[id]/: page.tsx
apps/web/components/: app-shell.tsx  navbar.tsx
apps/web/lib/: auth-client.ts  env.ts  query-client.ts
charts/vym-fyi-server-crud/: Chart.yaml  values-alb.yaml  values-s3-backup.yaml  values.yaml
charts/vym-fyi-server-redirect/: Chart.yaml  values.yaml
crates/vym-fyi-client/: Cargo.toml
crates/vym-fyi-client/src/: flow.rs  main.rs
crates/vym-fyi-client/src/services/: generate_csr.rs  get_token.rs  restart_agent.rs  save_to_file.rs  set_name.rs  stop_agent.rs  submit_csr.rs
crates/vym-fyi-client/src/shared/: cli.rs  config.rs  mod.rs  sed_command.rs
crates/vym-fyi-healthcheck/: Cargo.toml
crates/vym-fyi-healthcheck/src/: main.rs
crates/vym-fyi-model/: Cargo.toml  README.md
crates/vym-fyi-model/src/models/: errors.rs  mod.rs  url_shortener.rs
crates/vym-fyi-model/src/services/: axum_metrics.rs  config.rs  http_client.rs  mod.rs  query_adapter.rs  repos.rs  slug.rs  static_assets.rs
crates/vym-fyi-model/tests/: config_flow.rs
crates/vym-fyi-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/vym-fyi-node/src/: lib.rs
crates/vym-fyi-server-crud/: Cargo.toml  README.md
crates/vym-fyi-server-crud/migrations/: 20250101000000_init.sql
crates/vym-fyi-server-crud/src/: app.rs  auth.rs  bootstrap.rs  main.rs  models.rs
crates/vym-fyi-server-crud/src/handlers/: health.rs  links.rs  mod.rs  webhook.rs
crates/vym-fyi-server-crud/src/state/: builder.rs  core.rs  mod.rs  oauth.rs  spool.rs
crates/vym-fyi-server-redirect/: Cargo.toml  README.md
crates/vym-fyi-server-redirect/src/: app.rs  main.rs
crates/vym-fyi-server-redirect/src/handlers/: health.rs  middle.rs  mod.rs  register_agent.rs  revoke.rs  short_link.rs
crates/vym-fyi-server-redirect/src/models/: ca_config.rs  oidc_state.rs
crates/vym-fyi-server-redirect/src/shared/certs/: build_base.rs  extensions.rs  policy.rs  sign.rs
crates/vym-fyi-server-redirect/src/shared/crl/: ffi.rs  mod.rs  worker.rs
crates/vym-fyi-server-redirect/src/shared/ledger/: commands.rs  csv.rs  loader.rs  mod.rs  worker.rs
docs/: README.md  arc42.md  index.md
static/: 404.html  500.html
