[workspace]
members = [
    "crates/vym-fyi-server-redirect",
    "crates/vym-fyi-client",
    "crates/vym-fyi-model",
    "crates/vym-fyi-server-crud",
    "crates/vym-fyi-healthcheck"
]
resolver = "3"

[workspace.dependencies]
vym-fyi-model = { path = "crates/vym-fyi-model" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing", "net", "process", "fs"] }
thiserror = "2"
anyhow = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0"
openssl = { version = "0"}
rand = "0.9"
rand_core = "0.9"
rocket = { version = "0", features = ["tls", "json", "mtls", "serde_json"] }
oauth2 = { version = "5", features = ["reqwest"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
url = "2"
rocket_prometheus = "0.10.1"

openssl-sys = "0"
foreign-types = "0"

tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = { version = "0", features = ["attributes", "async-await", "std"] }

mimalloc = "0"

[profile.prod]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
strip = true

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
publish = false
authors = [
    "Stephane Segning <selastlambou@gmail.com>"
]
