[package]
name = "vym-fyi-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

[dependencies.vym-fyi-model]
features = ["openssl"]
workspace = true
