[package]
name = "vym-fyi-node"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
vym-fyi-model.workspace = true

[build-dependencies]
napi-build.workspace = true
