[package]
name = "vym-fyi-server-crud"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
rocket.workspace = true
serde.workspace = true
mimalloc.workspace = true
rocket_prometheus.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dependencies.vym-fyi-model]
workspace = true
features = ["rocket"]
