[package]
name = "vym-fyi-server-crud"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
mimalloc.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
log = "0.4.28"
axum.workspace = true
axum-prometheus.workspace = true
tower.workspace = true
hyper.workspace = true

[dependencies.vym-fyi-model]
workspace = true
