[package]
name = "vym-fyi-server-redirect"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
rocket.workspace = true
jsonwebtoken.workspace = true
openssl.workspace = true
rand.workspace = true
serde.workspace = true
mimalloc.workspace = true
clap.workspace = true
openssl-sys.workspace = true
foreign-types.workspace = true
url.workspace = true
rocket_prometheus.workspace = true

[dependencies.vym-fyi-model]
features = ["rocket", "openssl"]
workspace = true
