[package]
name = "vym-fyi-server-redirect"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
rocket.workspace = true
serde.workspace = true
mimalloc.workspace = true
rocket_prometheus.workspace = true
sqlx.workspace = true

[dependencies.vym-fyi-model]
features = ["rocket"]
workspace = true
