[package]
name = "vym-fyi-server-redirect"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
mimalloc.workspace = true
sqlx.workspace = true
axum.workspace = true
metrics.workspace = true

[dependencies.vym-fyi-model]
workspace = true
